# the-rpg

./: .gitignore  CMakeLists.txt  Collision.cpp  Collision.hpp  GameObject.cpp  GameObject.hpp  Map.cpp  Map.hpp  README.md  RpgGame.cpp  RpgGame.hpp  TextureManager.cpp  TextureManager.hpp  Vector2D.hpp
ECS/: ColliderComponent.hpp  ECS.hpp  KeyboardController.hpp  SpriteComponent.hpp  TransformComponent.hpp
app/: main.cpp
cmake/: FindSDL2_ttf.cmake
collision/: CMakeLists.txt  Collision.cpp  Collision.hpp
combat/: Combatant.cpp  Combatant.hpp  Equipment.cpp  Equipment.hpp
ecs/: CMakeLists.txt  ColliderComponent.hpp  Components.hpp  KeyboardController.hpp  SpriteComponent.hpp  TileComponent.hpp  TransformComponent.hpp  ecs.hpp
game/: CMakeLists.txt  RpgGame.cpp  RpgGame.hpp
guide/: guide.md
maps/: CMakeLists.txt  Map.cpp  Map.hpp  test.map.txt
objects/: CMakeLists.txt  GameObject.cpp  GameObject.hpp
rpg/: AssetManager.cpp  AssetManager.hpp  Collision.cpp  Collision.hpp  GameObject.cpp  Map.cpp  Map.hpp  RpgGame.cpp  RpgGame.hpp  RpgLabel.cpp  RpgLabel.hpp  RpgSoundManager.cpp  RpgSoundManager.hpp  RpgTimer.cpp  RpgTimer.hpp  SaveGame.cpp  SaveGame.hpp  SpriteSheet.hpp  TextureManager.cpp  TextureManager.hpp  Vector2D.cpp  Vector2D.hpp
rpg/assets/gui/: uipackSpace_sheet.json
rpg/assets/map/: combat_farm.json  farm_01.json  farm_02.json  farm_03.json  farm_04.json  farm_05.json  jsonsample.json  outdoor_01.json  outdoor_02.json  shop.json  testmap_10_10.json  testmap_50_50.json  testmap_5_5.json  town.json  zelda.json
rpg/assets/scripts/: Balda.txt  Bertio.txt  Elrers.txt  Ernard.txt  Freda.txt  Gatekeeper.txt  Geoffrey.txt  Giles.txt  Manne.txt  Marteph.txt  Mordekai.txt  Rewill.txt  Sige.txt  Walda.txt  Weidre.txt  Wulfhelm.txt  dialogue.lua  unnamed old man.txt
rpg/combat/: Combat.cpp  Combat.hpp  CombatTest.cpp  CombatTest.hpp  Combatant.cpp  Combatant.hpp  EnemyCombatant.cpp  EnemyCombatant.hpp  EnemyGenerator.cpp  EnemyGenerator.hpp  Equipment.cpp  Equipment.hpp  LootGenerator.cpp  LootGenerator.hpp  PlayerCombatant.cpp  PlayerCombatant.hpp  combat_test
rpg/ecs/: .CMakeLists.txt  ColliderComponent.hpp  Components.hpp  DoorComponent.hpp  InventoryComponent.hpp  KeyboardController.hpp  NameComponent.hpp  ProjectileComponent.hpp  SpriteComponent.hpp  TileComponent.hpp  TransformComponent.hpp  animation.hpp  ecs.cpp  ecs.hpp
rpg/inventory/: GuiHelper.cpp  GuiHelper.hpp
rpg/sound/: RpgSoundManager.cpp  RpgSoundManager.hpp
rpg/states/: RpgCombatState.cpp  RpgCombatState.hpp  RpgGameState.hpp  RpgInventoryState.cpp  RpgInventoryState.hpp  RpgLoadGameState.cpp  RpgLoadGameState.hpp  RpgMenuItem.cpp  RpgMenuItem.hpp  RpgMenuState.cpp  RpgMenuState.hpp  RpgPlayState.cpp  RpgPlayState.hpp  RpgPlayerConvoState.cpp  RpgPlayerConvoState.hpp  RpgStates.hpp  rpgInventoryState.cpp
texture/: CMakeLists.txt  TextureManager.cpp  TextureManager.hpp
vectors/: CMakeLists.txt  Vector2D.cpp  Vector2D.hpp
